@@ -178,7 +178,6 @@
         </note>
       </measure>
     <measure number="4">
-      <print new-system="yes"/>
       <note>
         <pitch>
           <step>G</step>
